fix overflow on css-mobile

--- a/public/stylesheets/style-mobile.css
+++ b/public/stylesheets/style-mobile.css
@@ -20,6 +20,7 @@
 	{
 		padding-top: 0;
 		overflow-x: hidden;
+		position: relative;	
 	}
 
 	h2, h3, h4, h5, h6
